--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <p>Join us next to the fireplace and get your cookies!&nbsp;🍪</p>
                     </div>                     
                     <div class="6u$ 12u$(medium) important(medium)"> 
-                        <span class="image fit"><video src="assets/videos/fire30.webm" onloadedmetadata="this.muted = true" controls playsinline autoplay muted loop></video> </span> 
+                        <span class="image fit"><video id="fire" src="assets/videos/fire30.webm" onloadedmetadata="this.muted = true" controls playsinline autoplay muted loop></video> </span> 
                     </div>                     
                 </div>                 
             </div>
@@ -100,8 +100,8 @@
                     </div>                     
                     <div class="4u$ 12u$(medium)"> 
                         <span class="image fit"><img src="assets/images/Jackson.jpg" alt=""/></span> 
-                        <h3>Jackson MacGlue</h3> 
-                        <p>Our last team member, Jackson has been really helpfull and is in charge of the technicals &amp; a part of the marketing.</p> 
+                        <h3>Glue Pig</h3> 
+                        <p>Welcome our latest addition to our team, Glue Pig! With 5 years experience in crypto, it is surefire he would make the project succeed!</p> 
                         <ul class="actions"> 
                             <li>
                                 <a href="https://reddit.com/u/foxycyber" class="button">Reddit</a>
