--- a/_pgbackup/index_1669898290.html
+++ b/_pgbackup/index_1669898290.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="assets/css/main.css"/> 
         <!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->         
         <!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->         
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/> 
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/> 
     </head>     
     <body> 
         <!-- Header -->         
@@ -21,6 +21,11 @@
                 <p>Join us around a warm open fire!<br> 
 					Get your $XCK and enjoy the ride!</p> 
                 <ul class="actions">
+                    <li>
+                        <a href="https://t.me/xmascookiesbscportal" target="_blank" class="button scrolly">Telegram</a>
+                    </li>
+                    <br/>
+                    <br/>
                     <li>
                         <a href="#one" class="button scrolly">Discover</a>
                     </li>
@@ -39,10 +44,7 @@
                         <p>Join us next to the fireplace and get your cookies!&nbsp;🍪</p>
                     </div>                     
                     <div class="6u$ 12u$(medium) important(medium)"> 
-                        <span class="image fit"> <video loop autoplay="autoplay">
-                                <source src="assets/videos/fire30.webm" type="video/webm">
-                                Your browser does not support the video tag.
-                            </video> </span> 
+                        <span class="image fit"><video src="assets/videos/fire30.webm" onloadedmetadata="this.muted = true" controls playsinline autoplay muted loop></video> </span> 
                     </div>                     
                 </div>                 
             </div>
@@ -80,7 +82,8 @@
                         <h3>Pokie</h3> 
                         <p>Founder of the Xmas Cookie team, Pokie has been on crypto since early 2021 and has worked on successful tokens since then.</p> 
                         <ul class="actions">
-                            <a href="#" class="button">More</a> 
+                            <a href="https://twitter.com/XmasCookiesBSC" class="button">Twitter</a> 
+                            <a href="https://t.me/TheRealPokie" class="button">Telegram</a>
                             <li>
 </li>                             
                         </ul>                         
@@ -101,7 +104,8 @@
                         <p>Our last team member, Jackson has been really helpfull and is in charge of the technicals &amp; a part of the marketing.</p> 
                         <ul class="actions"> 
                             <li>
-                                <a href="#" class="button">More</a>
+                                <a href="https://reddit.com/u/foxycyber" class="button">Reddit</a>
+                                <a href="https://www.github.com/unsuspiciouscat" class="button">Github</a>
                             </li>                             
                         </ul>                         
                     </div>                     
@@ -129,19 +133,19 @@
         <section id="footer"> 
             <ul class="icons"> 
                 <li>
-                    <a href="https://twitter.com/XmasCookiesBSC" class="icon alt fa-twitter"><span class="label">Twitter</span></a>
+                    <a href="https://twitter.com/XmasCookiesBSC"><i class="fa-brands fa-twitter"></i></a>
                 </li>                 
                 <li>
-                    <i class="fa-solid fa-cookie"></i>
+                    <a href="https://xmascookiestoken.github.io/"><i class="fa-solid fa-cookie"></i></a>
                 </li>                 
                 <li>
-                    <a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a>
+                    <a href="https://discord.com/invite/CybKjsyEhx"><i class="fa-brands fa-discord"></i></a>
                 </li>                 
                 <li>
-                    <a href="https://github.com/Xmascookiestoken" class="icon alt fa-github"><span class="label">GitHub</span></a>
+                    <a href="https://github.com/Xmascookiestoken"><i class="fa-brands fa-github"></i></a>
                 </li>                 
                 <li>
-                    <a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a>
+                    <a href="https://t.me/xmascookiesbscportal"><i class="fa-brands fa-telegram"></i></a>
                 </li>                 
             </ul>             
             <ul class="copyright"> 
