--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
                         <p>Join us next to the fireplace and get your cookies!&nbsp;🍪</p>
                     </div>                     
                     <div class="6u$ 12u$(medium) important(medium)"> 
-                        <span class="image fit"><video id="fire" src="assets/videos/fire30.webm" onloadedmetadata="this.muted = true" controls playsinline autoplay muted loop></video> </span> 
+                        <span class="image fit"> <video controls id="fire" autoplay="autoplay" muted loop>
+                                <!--<video id="fire" src="assets/videos/fire30.webm" src="assets/videos/fire.mp4" onloadedmetadata="this.muted = true" controls playsinline autoplay muted loop></video>-->
+                                <source src="assets/videos/fire30.webm" type="video/webm">
+                                <source src="assets/videos/fire.mp4" type="video/mp4">
+                            </video> </span> 
                     </div>                     
                 </div>                 
             </div>
