--- a/_pgbackup/index_1670331149.html
+++ b/_pgbackup/index_1670331149.html
@@ -44,9 +44,10 @@
                         <p>Join us next to the fireplace and get your cookies!&nbsp;🍪</p>
                     </div>                     
                     <div class="6u$ 12u$(medium) important(medium)"> 
-                        <span class="image fit"> <video loop autoplay="autoplay">
+                        <span class="image fit"> <video controls id="fire" autoplay="autoplay" muted loop>
+                                <!--<video id="fire" src="assets/videos/fire30.webm" src="assets/videos/fire.mp4" onloadedmetadata="this.muted = true" controls playsinline autoplay muted loop></video>-->
                                 <source src="assets/videos/fire30.webm" type="video/webm">
-                                Your browser does not support the video tag.
+                                <source src="assets/videos/fire.mp4" type="video/mp4">
                             </video> </span> 
                     </div>                     
                 </div>                 
@@ -85,7 +86,8 @@
                         <h3>Pokie</h3> 
                         <p>Founder of the Xmas Cookie team, Pokie has been on crypto since early 2021 and has worked on successful tokens since then.</p> 
                         <ul class="actions">
-                            <a href="#" class="button">More</a> 
+                            <a href="https://twitter.com/XmasCookiesBSC" class="button">Twitter</a> 
+                            <a href="https://t.me/TheRealPokie" class="button">Telegram</a>
                             <li>
 </li>                             
                         </ul>                         
@@ -102,11 +104,12 @@
                     </div>                     
                     <div class="4u$ 12u$(medium)"> 
                         <span class="image fit"><img src="assets/images/Jackson.jpg" alt=""/></span> 
-                        <h3>Jackson MacGlue</h3> 
-                        <p>Our last team member, Jackson has been really helpfull and is in charge of the technicals &amp; a part of the marketing.</p> 
+                        <h3>Glue Pig</h3> 
+                        <p>Welcome our latest addition to our team, Glue Pig! With 5 years experience in crypto, it is surefire he would make the project succeed!</p> 
                         <ul class="actions"> 
                             <li>
-                                <a href="#" class="button">More</a>
+                                <a href="https://reddit.com/u/foxycyber" class="button">Reddit</a>
+                                <a href="https://www.github.com/unsuspiciouscat" class="button">Github</a>
                             </li>                             
                         </ul>                         
                     </div>                     
