--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 <h2>
                     Let's enjoy Christmas all together! </h2>
                 <p>Join us around a warm open fire!<br> 
-					Get your $XCK and enjoy the ride!</p> 
+					Get your $XMAS and enjoy the ride!</p> 
                 <ul class="actions">
                     <li>
-                        <a href="https://t.me/xmascookiesbscportal" target="_blank" class="button scrolly">Telegram</a>
+                        <a href="https://t.me/xmascookiespomportal" target="_blank" class="button scrolly">Telegram</a>
                     </li>
                     <br/>
                     <br/>
@@ -66,9 +66,9 @@
                         <header class="major"> 
                             <h2>What is Xmas Cookies offering?</h2> 
                         </header>                         
-                        <p>Throught our smart contract and the experience of the team, Xmas Cookies ($XCK) is bringing the best, while providing investors safety &amp; trust.</p> 
+                        <p>Throught our smart contract and the experience of the team, Xmas Cookies ($XMAS) is bringing the best, while providing investors safety &amp; trust.</p> 
                         <p>Our contract has been renounced by the team so there could be no&nbsp;wrongdoing done to our holders.</p>
-                        <p>The buy &amp; sell tax has been set at 5% (1% reflections / 1% liquidity / 2% marketing) for everyone to invest cheerfully!</p>
+                        <p>The buy &amp; sell tax has been set at 5% (1% reflections / 2% liquidity / 2% marketing) for everyone to invest cheerfully!</p>
                     </div>                     
                 </div>                 
             </div>             
@@ -98,7 +98,7 @@
                         <p>Co-Founder, Lucky is bringing the best by taking care of the marketing and moderating the different social medias.</p> 
                         <ul class="actions"> 
                             <li>
-                                <a href="#" class="button">More</a>
+                                <a href="https://t.me/Luckybean" class="button">Telegram</a>
                             </li>                             
                         </ul>                         
                     </div>                     
@@ -125,10 +125,10 @@
                 <p></p> 
                 <ul class="actions uniform"> 
                     <li>
-                        <a href="#" class="button special">Chart</a>
+                        <a href="https://dexscreener.com/proofofmemes/0x9DcD21aad523A8c15EeC87563618EF5c09A11E87" class="button special">Chart</a>
                     </li>                     
                     <li>
-                        <a href="#" class="button special">Swap</a>
+                        <a href="https://www.pomswap.org/#/swap?0x9dcd21aad523a8c15eec87563618ef5c09a11e87" class="button special">Swap</a>
                     </li>                     
                 </ul>                 
             </div>             
