--- a/_pgbackup/index_1670331189.html
+++ b/_pgbackup/index_1670331189.html
@@ -19,7 +19,7 @@
                 <h2>
                     Let's enjoy Christmas all together! </h2>
                 <p>Join us around a warm open fire!<br> 
-					Get your $XCK and enjoy the ride!</p> 
+					Get your $XMAS and enjoy the ride!</p> 
                 <ul class="actions">
                     <li>
                         <a href="https://t.me/xmascookiesbscportal" target="_blank" class="button scrolly">Telegram</a>
@@ -44,9 +44,10 @@
                         <p>Join us next to the fireplace and get your cookies!&nbsp;🍪</p>
                     </div>                     
                     <div class="6u$ 12u$(medium) important(medium)"> 
-                        <span class="image fit">  <video loop autoplay="autoplay" class="fire">
+                        <span class="image fit"> <video controls id="fire" autoplay="autoplay" muted loop>
+                                <!--<video id="fire" src="assets/videos/fire30.webm" src="assets/videos/fire.mp4" onloadedmetadata="this.muted = true" controls playsinline autoplay muted loop></video>-->
                                 <source src="assets/videos/fire30.webm" type="video/webm">
-                                Your browser does not support the video tag.
+                                <source src="assets/videos/fire.mp4" type="video/mp4">
                             </video> </span> 
                     </div>                     
                 </div>                 
@@ -65,9 +66,9 @@
                         <header class="major"> 
                             <h2>What is Xmas Cookies offering?</h2> 
                         </header>                         
-                        <p>Throught our smart contract and the experience of the team, Xmas Cookies ($XCK) is bringing the best, while providing investors safety &amp; trust.</p> 
+                        <p>Throught our smart contract and the experience of the team, Xmas Cookies ($XMAS) is bringing the best, while providing investors safety &amp; trust.</p> 
                         <p>Our contract has been renounced by the team so there could be no&nbsp;wrongdoing done to our holders.</p>
-                        <p>The buy &amp; sell tax has been set at 5% (1% reflections / 1% liquidity / 2% marketing) for everyone to invest cheerfully!</p>
+                        <p>The buy &amp; sell tax has been set at 5% (1% reflections / 2% liquidity / 2% marketing) for everyone to invest cheerfully!</p>
                     </div>                     
                 </div>                 
             </div>             
@@ -85,7 +86,8 @@
                         <h3>Pokie</h3> 
                         <p>Founder of the Xmas Cookie team, Pokie has been on crypto since early 2021 and has worked on successful tokens since then.</p> 
                         <ul class="actions">
-                            <a href="#" class="button">More</a> 
+                            <a href="https://twitter.com/XmasCookiesBSC" class="button">Twitter</a> 
+                            <a href="https://t.me/TheRealPokie" class="button">Telegram</a>
                             <li>
 </li>                             
                         </ul>                         
@@ -96,17 +98,18 @@
                         <p>Co-Founder, Lucky is bringing the best by taking care of the marketing and moderating the different social medias.</p> 
                         <ul class="actions"> 
                             <li>
-                                <a href="#" class="button">More</a>
+                                <a href="" class="button">More</a>
                             </li>                             
                         </ul>                         
                     </div>                     
                     <div class="4u$ 12u$(medium)"> 
                         <span class="image fit"><img src="assets/images/Jackson.jpg" alt=""/></span> 
-                        <h3>Jackson MacGlue</h3> 
-                        <p>Our last team member, Jackson has been really helpfull and is in charge of the technicals &amp; a part of the marketing.</p> 
+                        <h3>Glue Pig</h3> 
+                        <p>Welcome our latest addition to our team, Glue Pig! With 5 years experience in crypto, it is surefire he would make the project succeed!</p> 
                         <ul class="actions"> 
                             <li>
-                                <a href="#" class="button">More</a>
+                                <a href="https://reddit.com/u/foxycyber" class="button">Reddit</a>
+                                <a href="https://www.github.com/unsuspiciouscat" class="button">Github</a>
                             </li>                             
                         </ul>                         
                     </div>                     
