--- a/_pgbackup/index_1670333648.html
+++ b/_pgbackup/index_1670333648.html
@@ -19,7 +19,7 @@
                 <h2>
                     Let's enjoy Christmas all together! </h2>
                 <p>Join us around a warm open fire!<br> 
-					Get your $XCK and enjoy the ride!</p> 
+					Get your $XMAS and enjoy the ride!</p> 
                 <ul class="actions">
                     <li>
                         <a href="https://t.me/xmascookiesbscportal" target="_blank" class="button scrolly">Telegram</a>
@@ -44,9 +44,10 @@
                         <p>Join us next to the fireplace and get your cookies!&nbsp;🍪</p>
                     </div>                     
                     <div class="6u$ 12u$(medium) important(medium)"> 
-                        <span class="image fit"> <video loop autoplay="autoplay" class="fire">
+                        <span class="image fit"> <video controls id="fire" autoplay="autoplay" muted loop>
+                                <!--<video id="fire" src="assets/videos/fire30.webm" src="assets/videos/fire.mp4" onloadedmetadata="this.muted = true" controls playsinline autoplay muted loop></video>-->
                                 <source src="assets/videos/fire30.webm" type="video/webm">
-                                Your browser does not support the video tag.
+                                <source src="assets/videos/fire.mp4" type="video/mp4">
                             </video> </span> 
                     </div>                     
                 </div>                 
@@ -65,9 +66,9 @@
                         <header class="major"> 
                             <h2>What is Xmas Cookies offering?</h2> 
                         </header>                         
-                        <p>Throught our smart contract and the experience of the team, Xmas Cookies ($XCK) is bringing the best, while providing investors safety &amp; trust.</p> 
+                        <p>Throught our smart contract and the experience of the team, Xmas Cookies ($XMAS) is bringing the best, while providing investors safety &amp; trust.</p> 
                         <p>Our contract has been renounced by the team so there could be no&nbsp;wrongdoing done to our holders.</p>
-                        <p>The buy &amp; sell tax has been set at 5% (1% reflections / 1% liquidity / 2% marketing) for everyone to invest cheerfully!</p>
+                        <p>The buy &amp; sell tax has been set at 5% (1% reflections / 2% liquidity / 2% marketing) for everyone to invest cheerfully!</p>
                     </div>                     
                 </div>                 
             </div>             
@@ -97,14 +98,14 @@
                         <p>Co-Founder, Lucky is bringing the best by taking care of the marketing and moderating the different social medias.</p> 
                         <ul class="actions"> 
                             <li>
-                                <a href="#" class="button">More</a>
+                                <a href="https://t.me/Luckybean" class="button">Telegram</a>
                             </li>                             
                         </ul>                         
                     </div>                     
                     <div class="4u$ 12u$(medium)"> 
                         <span class="image fit"><img src="assets/images/Jackson.jpg" alt=""/></span> 
-                        <h3>Jackson MacGlue</h3> 
-                        <p>Our last team member, Jackson has been really helpfull and is in charge of the technicals &amp; a part of the marketing.</p> 
+                        <h3>Glue Pig</h3> 
+                        <p>Welcome our latest addition to our team, Glue Pig! With 5 years experience in crypto, it is surefire he would make the project succeed!</p> 
                         <ul class="actions"> 
                             <li>
                                 <a href="https://reddit.com/u/foxycyber" class="button">Reddit</a>
@@ -124,10 +125,10 @@
                 <p></p> 
                 <ul class="actions uniform"> 
                     <li>
-                        <a href="#" class="button special">Chart</a>
+                        <a href="https://dexscreener.com/proofofmemes/0x9DcD21aad523A8c15EeC87563618EF5c09A11E87" class="button special">Chart</a>
                     </li>                     
                     <li>
-                        <a href="#" class="button special">Swap</a>
+                        <a href="https://www.pomswap.org/#/swap?0x9dcd21aad523a8c15eec87563618ef5c09a11e87" class="button special">Swap</a>
                     </li>                     
                 </ul>                 
             </div>             
