--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                 <ul class="actions">
                     <li>
                         <a href="https://t.me/xmascookiespomportal" target="_blank" class="button scrolly">Telegram</a>
+                        <a href="./Xmaspaper-1.0.pdf" target="_blank" class="button scrolly">Whitepaper</a>
                     </li>
                     <br/>
                     <br/>
