Team members removed

--- a/index.html
+++ b/index.html
@@ -94,26 +94,27 @@
                         </ul>                         
                     </div>                     
                     <div class="4u 12u$(medium)"> 
-                        <span class="image fit"><img src="assets/images/Lucky.jpg" alt=""/></span> 
-                        <h3>Lucky🌈</h3> 
-                        <p>Co-Founder, Lucky is bringing the best by taking care of the marketing and moderating the different social medias.</p> 
+                        <span class="image fit"><img src="assets/images/I want you.png" alt=""/></span> 
+                        <h3>YOUR NAME</h3> 
+                        <p>Hello! Want to participate managing a community and being a team member of the core team?</p>
+                        <p>Contact POKIE on his telegram account!</p>
+                        <p></p> 
                         <ul class="actions"> 
                             <li>
-                                <a href="https://t.me/Luckybean" class="button">Telegram</a>
+                                <a href="https://t.me/TheRealPokie" class="button">Telegram</a>
                             </li>                             
-                        </ul>                         
+                        </ul>
                     </div>                     
                     <div class="4u$ 12u$(medium)"> 
-                        <span class="image fit"><img src="assets/images/Jackson.jpg" alt=""/></span> 
-                        <h3>Glue Pig</h3> 
-                        <p>Welcome our latest addition to our team, Glue Pig! With 5 years experience in crypto, it is surefire he would make the project succeed!</p> 
+                        <span class="image fit"><img src="assets/images/I want you.png" alt=""/></span> 
+                        <h3>YOUR NAME</h3> 
+                        <p><p>Hello! Want to participate managing a community and being a team member of the core team?</p><p>Contact POKIE on his telegram account!</p></p> 
                         <ul class="actions"> 
                             <li>
-                                <a href="https://reddit.com/u/foxycyber" class="button">Reddit</a>
-                                <a href="https://www.github.com/unsuspiciouscat" class="button">Github</a>
+                                <a href="https://t.me/TheRealPokie" class="button">Telegram</a>
                             </li>                             
                         </ul>                         
-                    </div>                     
+                    </div>
                 </div>                 
             </div>             
         </section>         
